v2: whatsapp message formate change

--- a/Careers.html
+++ b/Careers.html
@@ -328,7 +328,7 @@
         </div>
         <a id="button"></a>
     </section>
-    <a href="https://wa.me/9925122772?text=I'm%20interested"
+    <a href="https://wa.me/9925122772?text=Hello!%0A%0AThis is [Your Name].%0AI'd like to inquire about [Your Inquiry].%0A%0APlease respond."
         class="float" target="_blank">
         <i class="fa fa-whatsapp my-float"></i>
     </a>
