--- a/Workspace.html
+++ b/Workspace.html
@@ -792,7 +792,7 @@
         <a id="button"></a>
 
     </main>
-    <a href="https://wa.me/9925122772?text=I'm%20interested" class="float" target="_blank">
+    <a href="https://wa.me/9925122772?text=Hello!%0A%0AThis is [Your Name].%0AI'd like to inquire about [Your Inquiry].%0A%0APlease respond." class="float" target="_blank">
         <i class="fa fa-whatsapp my-float"></i>
     </a>
     <footer class="footer-section">
