--- a/Blogs.html
+++ b/Blogs.html
@@ -584,7 +584,7 @@
         <div class="section_padding"></div>
         <a id="button"></a>
     </section>
-    <a href="https://wa.me/9925122772?text=I'm%20interested" class="float" target="_blank">
+    <a href="https://wa.me/9925122772?text=Hello!%0A%0AThis is [Your Name].%0AI'd like to inquire about [Your Inquiry].%0A%0APlease respond." class="float" target="_blank">
         <i class="fa fa-whatsapp my-float"></i>
     </a>
     <footer class="footer-section">
