--- a/AboutUs.html
+++ b/AboutUs.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BSQUARE - About Us</title>
     <link rel="icon" href="./images/favicon.png" type="image/png">
     <link rel="stylesheet" href="./style.css">
 
