--- a/ourlocations/location1.html
+++ b/ourlocations/location1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BSQUARE - Prahlad Nagar</title>
         <link rel="icon" href="../images/favicon.png" type="image/png">
     <link rel="stylesheet" href="../style.css">
 
@@ -307,7 +307,7 @@
 
         <a id="button"></a>
     </div>
-    <a href="https://api.whatsapp.com/send?phone=&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202."
+    <a href="https://wa.me/9925122772?text=Hello!%0A%0AThis is [Your Name].%0AI'd like to inquire about [Your Inquiry].%0A%0APlease respond."
         class="float" target="_blank">
         <i class="fa fa-whatsapp my-float"></i>
     </a>
