logo update narangpura

--- a/navrangpura.html
+++ b/navrangpura.html
@@ -194,7 +194,7 @@
             <div class="container main_nav_container justify-content-center">
                 <div class="d-flex flex-row justify-content-between inner_div">
                     <a class="navbar-brand" href="../index.html">
-                        <img src="../images/BSquare logo without bg.png" alt="Bsquare"></a>
+                        <img src="./images/BSquare logo without bg.png" alt="Bsquare"></a>
                     <button class="navbar-toggler " type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2">
                         <span class="bi bi-list "></span>
