--- a/IIMAroad.html
+++ b/IIMAroad.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BSQUARE - IIM A Road</title>
-    <link rel="icon" href="../images/favicon.png" type="image/png">
+    <link rel="icon" href="./images/favicon.png" type="image/png">
     <link rel="stylesheet" href="./style.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -209,8 +209,8 @@
         <div class="container-fluid" id="nav_container">
             <div class="container main_nav_container justify-content-center">
                 <div class="d-flex flex-row justify-content-between inner_div">
-                    <a class="navbar-brand" href="../index.html">
-                        <img src="../images/BSquare logo without bg.png" alt="Bsquare"></a>
+                    <a class="navbar-brand" href="./index.html">
+                        <img src="./images/BSquare logo without bg.png" alt="Bsquare"></a>
                     <button class="navbar-toggler " type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2">
                         <span class="bi bi-list "></span>
@@ -219,7 +219,7 @@
                 <div class="offcanvas offcanvas-end text-bg-light m-auto" tabindex="-1" id="offcanvasNavbar2"
                     aria-labelledby="offcanvasNavbar2Label">
                     <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasNavbar2Label"><img src="../images/logo2.png" alt="">
+                        <h5 class="offcanvas-title" id="offcanvasNavbar2Label"><img src="./images/logo2.png" alt="">
                         </h5>
                         <button type="button" class="btn-close btn-close-dark" data-bs-dismiss="offcanvas"
                             aria-label="Close"></button>
@@ -241,17 +241,17 @@
                                 </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="../Workspace.html">Workspace</a>
+                                <a class="nav-link" aria-current="page" href="./Workspace.html">Workspace</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../Facilities.html">Amenities</a>
+                                <a class="nav-link" href="./Facilities.html">Amenities</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="../Gallery.html">Gallery</a>
+                                <a class="nav-link" href="./Gallery.html">Gallery</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../AboutUs.html">About&nbsp;Us</a>
+                                <a class="nav-link" href="./AboutUs.html">About&nbsp;Us</a>
                             </li>
                             <li class="nav-item" style="display: flex; align-items: center;">
                                 <a class="nav-link" href="tel:+91 9925122772">+91&nbsp;9925122772</a>
@@ -269,7 +269,7 @@
         <div id="carouselExampleControls" class="carousel slide pc" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../images/backposters/28 (1).png" class="d-block w-100" alt="...">
+                    <img src="./images/backposters/28 (1).png" class="d-block w-100" alt="bsquarecoworkingspace">
                     <div class="title">
                         <h1 class="animated slideInDown"><span>IIM-A Road</span></h1>
                         <h2 class="animated slideInLeft mt-3 p-2" style="font-size: 17px;"><span>Choosing the Right
@@ -281,7 +281,7 @@
         <div id="carouselExampleControls" class="carousel slide d-md-block d-lg-none" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../images/backposters/mobiles banner/4.png" class="d-block w-100" alt="...">
+                    <img src="./images/backposters/mobiles banner/4.png" class="d-block w-100" alt="bsquarecoworkingspace">
                     <div class="title">
                         <h1 class="animated slideInDown"><span>IIM-A Road</span></h1>
                         <h2 class="animated slideInLeft mt-3 p-2" style="font-size: 17px;"><span>Choosing the Right
@@ -388,7 +388,7 @@
                     <div class="col-xl-3 col-lg-3 mb-50">
                         <div class="footer-widget">
                             <div class="footer-logo">
-                                <a href="index.html"><img src="../images/logo.JPG" class="img-fluid" alt="logo"></a>
+                                <a href="index.html"><img src="./images/logo.JPG" class="img-fluid" alt="logo"></a>
                             </div>
                             <div class="footer-text">
                                 <p>BSQUARE is a coworking space in Ahmedabad that provides world class workspaces,
@@ -410,24 +410,24 @@
                                 data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active" data-bs-interval="10000">
-                                        <img src="./images/teamwork.jpg" class="d-block w-100" alt="...">
+                                        <img src="./images/teamwork.jpg" class="d-block w-100" alt="bsquarecoworkingspace">
                                         <br>
                                         <a href="bsquareblog.html?content=link4">Read More</a>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./images/01.jpg" class="d-block w-100" alt="...">
+                                        <img src="./images/01.jpg" class="d-block w-100" alt="bsquarecoworkingspace">
                                         <br>
                                         <a href="bsquareblog.html?content=link1">Read More</a>
                                         <br> <br>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./location1/9-9.jpg" class="d-block w-100" alt="...">
+                                        <img src="./location1/9-9.jpg" class="d-block w-100" alt="bsquarecoworkingspace">
                                         <br>
                                         <a href="bsquareblog.html?content=link2">Read More</a>
                                         <br> <br>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="../images/office day.jpg" class="d-block w-100" alt="...">
+                                        <img src="./images/office day.jpg" class="d-block w-100" alt="bsquarecoworkingspace">
                                         <br>
                                         <a href="bsquareblog.html?content=link3">Read More</a>
                                         <br> <br>
@@ -451,7 +451,7 @@
 
                         <div class="footer-widget-heading">
 
-                            <img src="../images/map2.png" width="100%" alt="">
+                            <img src="./images/map2.png" width="100%" alt="">
                         </div>
 
 
@@ -465,7 +465,7 @@
                                     <div class="carousel-item active" data-bs-interval="50000">
                                         <a href="https://instagram.com/bsquarecoworks?igshid=MzRlODBiNWFlZA=="
                                             target="_blank">
-                                            <video src="../images/reels/reel1.mp4" autoplay width="100%"></video>
+                                            <video src="./images/reels/reel1.mp4" autoplay width="100%"></video>
                                         </a>
 
 
@@ -473,14 +473,14 @@
                                     <div class="carousel-item" data-bs-interval="50000">
                                         <a href="https://instagram.com/bsquarecoworks?igshid=MzRlODBiNWFlZA=="
                                             target="_blank">
-                                            <video src="../images/reels/reel2.mp4" autoplay width="100%"></video>
+                                            <video src="./images/reels/reel2.mp4" autoplay width="100%"></video>
                                         </a>
 
 
                                     </div>
                                     <div class="carousel-item" data-bs-interval="50000">
                                         <a href="https://instagram.com/bsquarecoworks?igshid=MzRlODBiNWFlZA=="
-                                            target="_blank"> <video src="../images/reels/reel3.mp4" autoplay
+                                            target="_blank"> <video src="./images/reels/reel3.mp4" autoplay
                                                 width="100%"></video></a>
 
 
@@ -508,15 +508,15 @@
                                 <h3>Useful Links</h3>
                             </div>
                             <ul class="p-0">
-                                <li><a href="../index.html">Home</a></li>
-                                <li><a href="../Blogs.html">Blogs</a></li>
+                                <li><a href="./index.html">Home</a></li>
+                                <li><a href="./Blogs.html">Blogs</a></li>
 
-                                <li><a href="../Facilities.html">Facilities</a></li>
-                                <li><a href="../Careers.html">Careers</a></li>
+                                <li><a href="./Facilities.html">Facilities</a></li>
+                                <li><a href="./Careers.html">Careers</a></li>
 
-                                <li><a href="../Gallery.html">Gallery</a></li>
-                                <li><a href="../FAQ.html">FAQ</a></li>
-                                <li><a href="../AboutUs.html">About Us</a></li>
+                                <li><a href="./Gallery.html">Gallery</a></li>
+                                <li><a href="./FAQ.html">FAQ</a></li>
+                                <li><a href="./AboutUs.html">About Us</a></li>
                                 <li class="mb-5">&nbsp;</li>
 
                             </ul>
@@ -564,7 +564,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
-    <script src="../script.js"></script>
+    <script src="./script.js"></script>
 
     <script>
         var btn = $('#button');
