--- a/bsquareblog.html
+++ b/bsquareblog.html
@@ -322,7 +322,7 @@
                         </div>
                         <div class="card"
                             style="width: 100%; border: none; box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;">
-                            <img src="../images/office day.jpg" width="100%" alt="">
+                            <img src="./images/office day.jpg" width="100%" alt="">
                             <div class="card-body">
                                 <span class="bi bi-calendar-check-fill"> April 12, 2019</span>
                                 <br>
@@ -436,7 +436,7 @@
                         </div>
                         <div class="card"
                             style="width: 100%; border: none; box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;">
-                            <img src="../images/office day.jpg" width="100%" alt="">
+                            <img src="./images/office day.jpg" width="100%" alt="">
                             <div class="card-body">
                                 <span class="bi bi-calendar-check-fill"> April 12, 2019</span>
                                 <br>
@@ -574,7 +574,7 @@
                         </div>
                         <div class="card"
                             style="width: 100%; border: none; box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;">
-                            <img src="../images/office day.jpg" width="100%" alt="">
+                            <img src="./images/office day.jpg" width="100%" alt="">
                             <div class="card-body">
                                 <span class="bi bi-calendar-check-fill"> April 12, 2019</span>
                                 <br>
