--- a/index.html
+++ b/index.html
@@ -402,23 +402,23 @@
                                     <a class="dropdown-item" href="./prahladnagar.html">Prahlad Nagar Corporate Road</a>
                                     <a class="dropdown-item" href="./s.g.road.html">S.G.Road</a>
 
-                                    <a class="dropdown-item" href="./IIMAroad.html">IIM A Road</a>
+                                    <a class="dropdown-item" href="./iimaroad.html">IIM A Road</a>
                                     <a class="dropdown-item" href="./navrangpura.html">Navrangpura</a>
                                     <a class="dropdown-item" href="./sindhubhawan.html">Sindhu Bhawan</a>
                                 </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="Workspace.html">Workspace</a>
+                                <a class="nav-link" aria-current="page" href="workspace.html">Workspace</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="Facilities.html">Amenities</a>
+                                <a class="nav-link" href="facilities.html">Amenities</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="Gallery.html">Gallery</a>
+                                <a class="nav-link" href="gallery.html">Gallery</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="AboutUs.html">About&nbsp;Us</a>
+                                <a class="nav-link" href="aboutus.html">About&nbsp;Us</a>
                             </li>
                             <li class="nav-item" style="display: flex; align-items: center;">
                                 <a class="nav-link" href="tel:+91 9925122772">+91&nbsp;9925122772</a>
@@ -674,7 +674,7 @@
                         <div class="row">
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up"
                                 data-aos-duration="1000">
-                                <a href="./Workspace.html">
+                                <a href="./workspace.html">
                                     <div class="card-flyer">
                                         <div class="text-box">
                                             <div class="image-box">
@@ -688,7 +688,7 @@
                                                     ...</p>
 
                                                 <br>
-                                                <a href="./Workspace.html" class="read_more_btn"><button>Know
+                                                <a href="./workspace.html" class="read_more_btn"><button>Know
                                                         More</button></a>
                                             </div>
                                         </div>
@@ -697,7 +697,7 @@
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up"
                                 data-aos-duration="1000">
-                                <a href="./Workspace.html">
+                                <a href="./workspace.html">
                                     <div class="card-flyer">
                                         <div class="text-box">
                                             <div class="image-box">
@@ -712,7 +712,7 @@
                                                     <br> <br>
                                                 </p>
                                                 <div class="w-100">
-                                                    <a href="./Workspace.html" class="read_more_btn"><button>Know
+                                                    <a href="./workspace.html" class="read_more_btn"><button>Know
                                                             More</button></a>
                                                 </div>
                                             </div>
@@ -722,7 +722,7 @@
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up"
                                 data-aos-duration="1000">
-                                <a href="./Workspace.html">
+                                <a href="./workspace.html">
                                     <div class="card-flyer">
                                         <div class="text-box">
                                             <div class="image-box">
@@ -734,7 +734,7 @@
                                                 <p>Now conducting meetings, interviews, conferences and presentations at
                                                     a fully furnished and well equipped meeting room is ...</p>
                                                 <br>
-                                                <a href="./Workspace.html" class="read_more_btn"><button>Know
+                                                <a href="./workspace.html" class="read_more_btn"><button>Know
                                                         More</button></a>
                                             </div>
                                         </div>
@@ -743,7 +743,7 @@
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up"
                                 data-aos-duration="1000">
-                                <a href="./Workspace.html">
+                                <a href="./workspace.html">
                                     <div class="card-flyer">
                                         <div class="text-box">
                                             <div class="image-box">
@@ -755,7 +755,7 @@
                                                     address, mail handling and phone reception for your company while
                                                     you are away ...</p>
                                                 <br>
-                                                <a href="./Workspace.html" class="read_more_btn"><button>Know
+                                                <a href="./workspace.html" class="read_more_btn"><button>Know
                                                         More</button></a>
                                             </div>
                                         </div>
@@ -1060,24 +1060,24 @@
                                     <div class="carousel-item active" data-bs-interval="10000">
                                         <img src="./images/teamwork.jpg" class="d-block w-100" alt="bsquare">
                                         <br>
-                                        <a href="bsquareblog.html?content=link4">Read More</a>
+                                        <a href="bsquareblog.html?content=link4" target="_bquare">Read More</a>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
                                         <img src="./images/01.jpg" class="d-block w-100" alt="bsquare">
                                         <br>
-                                        <a href="bsquareblog.html?content=link1">Read More</a>
+                                        <a href="bsquareblog.html?content=link1" target="_bquare">Read More</a>
                                         <br> <br>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
                                         <img src="./location1/9-9.jpg" class="d-block w-100" alt="bsquare">
                                         <br>
-                                        <a href="bsquareblog.html?content=link2">Read More</a>
+                                        <a href="bsquareblog.html?content=link2" target="_bquare">Read More</a>
                                         <br> <br>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
                                         <img src="../images/office day.jpg" class="d-block w-100" alt="bsquare">
                                         <br>
-                                        <a href="bsquareblog.html?content=link3">Read More</a>
+                                        <a href="bsquareblog.html?content=link3" target="_bquare">Read More</a>
                                         <br> <br>
                                     </div>
                                 </div>
@@ -1145,14 +1145,14 @@
                             </div>
                             <ul class="p-0">
                                 <li><a href="./index.html">Home</a></li>
-                                <li><a href="./Blogs.html">Blogs</a></li>
+                                <li><a href="./blogs.html">Blogs</a></li>
 
-                                <li><a href="./Facilities.html">Facilities</a></li>
-                                <li><a href="./Careers.html">Careers</a></li>
+                                <li><a href="./facilities.html">Facilities</a></li>
+                                <li><a href="./careers.html">Careers</a></li>
 
-                                <li><a href="./Gallery.html">Gallery</a></li>
-                                <li><a href="./FAQ.html">FAQ</a></li>
-                                <li><a href="./AboutUs.html">About Us</a></li>
+                                <li><a href="./gallery.html">Gallery</a></li>
+                                <li><a href="./faq.html">FAQ</a></li>
+                                <li><a href="./aboutus.html">About Us</a></li>
                                 <li class="mb-5">&nbsp;</li>
 
                             </ul>
