--- a/sindhubhawan.html
+++ b/sindhubhawan.html
@@ -216,23 +216,23 @@
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
                                     <a class="dropdown-item" href="./prahladnagar.html">Prahlad Nagar Corporate Road</a>
                                     <a class="dropdown-item" href="./s.g.road.html">S.G.Road</a>
-                                    <a class="dropdown-item" href="./IIMAroad.html">IIM A Road</a>
+                                    <a class="dropdown-item" href="./iimaroad.html">IIM A Road</a>
                                     <a class="dropdown-item" href="./navrangpura.html">Navrangpura</a>
                                     <a class="dropdown-item" href="./sindhubhawan.html">Sindhu Bhawan</a>
                                 </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="./Workspace.html">Workspace</a>
+                                <a class="nav-link" aria-current="page" href="./workspace.html">Workspace</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./Facilities.html">Amenities</a>
+                                <a class="nav-link" href="./facilities.html">Amenities</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="./Gallery.html">Gallery</a>
+                                <a class="nav-link" href="./gallery.html">Gallery</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./AboutUs.html">About&nbsp;Us</a>
+                                <a class="nav-link" href="./aboutus.html">About&nbsp;Us</a>
                             </li>
                             <li class="nav-item" style="display: flex; align-items: center;">
                                 <a class="nav-link" href="tel:+91 9925122772">+91&nbsp;9925122772</a>
@@ -408,24 +408,24 @@
                                 <div class="carousel-item active" data-bs-interval="10000">
                                     <img src="./images/teamwork.jpg" class="d-block w-100" alt="bsquarecoworkingspace">
                                     <br>
-                                    <a href="bsquareblog.html?content=link4">Read More</a>
+                                    <a href="bsquareblog.html?content=link4" target="_bquare">Read More</a>
                                 </div>
                                 <div class="carousel-item" data-bs-interval="2000">
                                     <img src="./images/01.jpg" class="d-block w-100" alt="bsquarecoworkingspace">
                                     <br>
-                                    <a href="bsquareblog.html?content=link1">Read More</a>
+                                    <a href="bsquareblog.html?content=link1" target="_bquare">Read More</a>
                                     <br> <br>
                                 </div>
                                 <div class="carousel-item" data-bs-interval="2000">
                                     <img src="./location1/9-9.jpg" class="d-block w-100" alt="bsquarecoworkingspace">
                                     <br>
-                                    <a href="bsquareblog.html?content=link2">Read More</a>
+                                    <a href="bsquareblog.html?content=link2" target="_bquare">Read More</a>
                                     <br> <br>
                                 </div>
                                 <div class="carousel-item" data-bs-interval="2000">
                                     <img src="./images/office day.jpg" class="d-block w-100" alt="bsquarecoworkingspace">
                                     <br>
-                                    <a href="bsquareblog.html?content=link3">Read More</a>
+                                    <a href="bsquareblog.html?content=link3" target="_bquare">Read More</a>
                                     <br> <br>
                                 </div>
                             </div>
@@ -505,14 +505,14 @@
                             </div>
                             <ul class="p-0">
                                 <li><a href="./index.html">Home</a></li>
-                                <li><a href="./Blogs.html">Blogs</a></li>
+                                <li><a href="./blogs.html">Blogs</a></li>
 
-                                <li><a href="./Facilities.html">Facilities</a></li>
-                                <li><a href="./Careers.html">Careers</a></li>
+                                <li><a href="./facilities.html">Facilities</a></li>
+                                <li><a href="./careers.html">Careers</a></li>
 
-                                <li><a href="./Gallery.html">Gallery</a></li>
-                                <li><a href="./FAQ.html">FAQ</a></li>
-                                <li><a href="./AboutUs.html">About Us</a></li>
+                                <li><a href="./gallery.html">Gallery</a></li>
+                                <li><a href="./faq.html">FAQ</a></li>
+                                <li><a href="./aboutus.html">About Us</a></li>
                                 <li class="mb-5">&nbsp;</li>
 
                             </ul>
