--- a/IIMAroad.html
+++ b/IIMAroad.html
@@ -235,23 +235,23 @@
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
                                     <a class="dropdown-item" href="./prahladnagar.html">Prahlad Nagar Corporate Road</a>
                                     <a class="dropdown-item" href="./s.g.road.html">S.G.Road</a>
-                                    <a class="dropdown-item" href="./IIMAroad.html">IIM A Road</a>
+                                    <a class="dropdown-item" href="./iimaroad.html">IIM A Road</a>
                                     <a class="dropdown-item" href="./navrangpura.html">Navrangpura</a>
                                     <a class="dropdown-item" href="./sindhubhawan.html">Sindhu Bhawan</a>
                                 </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="./Workspace.html">Workspace</a>
+                                <a class="nav-link" aria-current="page" href="./workspace.html">Workspace</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./Facilities.html">Amenities</a>
+                                <a class="nav-link" href="./facilities.html">Amenities</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="./Gallery.html">Gallery</a>
+                                <a class="nav-link" href="./gallery.html">Gallery</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./AboutUs.html">About&nbsp;Us</a>
+                                <a class="nav-link" href="./aboutus.html">About&nbsp;Us</a>
                             </li>
                             <li class="nav-item" style="display: flex; align-items: center;">
                                 <a class="nav-link" href="tel:+91 9925122772">+91&nbsp;9925122772</a>
@@ -509,14 +509,14 @@
                             </div>
                             <ul class="p-0">
                                 <li><a href="./index.html">Home</a></li>
-                                <li><a href="./Blogs.html">Blogs</a></li>
+                                <li><a href="./blogs.html">Blogs</a></li>
 
-                                <li><a href="./Facilities.html">Facilities</a></li>
-                                <li><a href="./Careers.html">Careers</a></li>
+                                <li><a href="./facilities.html">Facilities</a></li>
+                                <li><a href="./careers.html">Careers</a></li>
 
-                                <li><a href="./Gallery.html">Gallery</a></li>
-                                <li><a href="./FAQ.html">FAQ</a></li>
-                                <li><a href="./AboutUs.html">About Us</a></li>
+                                <li><a href="./gallery.html">Gallery</a></li>
+                                <li><a href="./faq.html">FAQ</a></li>
+                                <li><a href="./aboutus.html">About Us</a></li>
                                 <li class="mb-5">&nbsp;</li>
 
                             </ul>
