--- a/bsquareblog.html
+++ b/bsquareblog.html
@@ -304,7 +304,7 @@
                                     big
                                     and small
                                     cities....</p>
-                                <a href="bsquareblog.html?content=link4" class="btn btn-primary">Read More</a>
+                                <a href="bsquareblog.html?content=link4" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                         <div class="card"
@@ -317,7 +317,7 @@
                                     Workspaces</h5>
                                 <p class="card-text">The world of real estate is undergoing a significant transformation, and
                                     at the heart of this change is the booming trend of co-working spaces...</p>
-                                <a href="bsquareblog.html?content=link2" class="btn btn-primary">Read More</a>
+                                <a href="bsquareblog.html?content=link2" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                         <div class="card"
@@ -329,7 +329,7 @@
                                 <h5 class="card-title">Flexi Office Solutions: The Strategic Gamble Driving Big Revenue Boosts</h5>
                                 <p class="card-text">In the ever-evolving landscape of work environments, Flexi Office
                                     Companies are making a strategic bet...</p>
-                                <a href="bsquareblog.html?content=link3" class="btn btn-primary">Read More</a>
+                                <a href="bsquareblog.html?content=link3" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
 
@@ -419,7 +419,7 @@
                                 <p class="card-text">Flexible office spaces and co-working spaces are a rage in all the big
                                     and small
                                     cities...</p>
-                                <a href="bsquareblog.html?content=link4" class="btn btn-primary">Read More</a>
+                                <a href="bsquareblog.html?content=link4" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                         <div class="card"
@@ -431,7 +431,7 @@
                                 <h5 class="card-title">All You Need to Know About BSQUARE Coworking Space</h5>
                                 <p class="card-text">Choosing the right kind of office space is key to making sure you have a
                                                 successful...</p>
-                                <a href="bsquareblog.html?content=link1" class="btn btn-primary">Read More</a>
+                                <a href="bsquareblog.html?content=link1" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                         <div class="card"
@@ -443,7 +443,7 @@
                                 <h5 class="card-title">Flexi Office Solutions: The Strategic Gamble Driving Big Revenue Boosts</h5>
                                 <p class="card-text">In the ever-evolving landscape of work environments, Flexi Office
                                     Companies are making a strategic bet...</p>
-                                <a href="bsquareblog.html?content=link3" class="btn btn-primary">Read More</a>
+                                <a href="bsquareblog.html?content=link3" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
 
@@ -556,7 +556,7 @@
                                 <p class="card-text">Flexible office spaces and co-working spaces are a rage in all the big
                                     and small
                                     cities...</p>
-                                <a href="bsquareblog.html?content=link4" class="btn btn-primary">Read More</a>
+                                <a href="bsquareblog.html?content=link4" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                         <div class="card"
@@ -569,7 +569,7 @@
                                     Workspaces</h5>
                                 <p class="card-text">The world of real estate is undergoing a significant transformation, and
                                     at the heart of this change is the booming trend of co-working spaces...</p>
-                                <a href="bsquareblog.html?content=link2" class="btn btn-primary">Read More</a>
+                                <a href="bsquareblog.html?content=link2" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                         <div class="card"
@@ -582,7 +582,7 @@
                                 <p class="card-text">Choosing the right kind of office space is key to making sure you have a
                                     successful
                                     career and get to focus on your productivity and nothing else...</p>
-                                <a href="bsquareblog.html?content=link1" class="btn btn-primary">Read More</a>
+                                <a href="bsquareblog.html?content=link1" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
 
@@ -710,7 +710,7 @@
                                 <br>
                                 <h5 class="card-title">All You Need to Know About BSQUARE Coworking Space</h5>
                                 <p class="card-text">Choosing the right kind of office space is key to making sure you have a successful career and get to focus on your productivity and nothing else. But this can ...</p>
-                                <a href="bsquareblog.html?content=link1" class="btn btn-primary">Read More</a>
+                                <a href="bsquareblog.html?content=link1" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                         <div class="card"
@@ -723,7 +723,7 @@
                                     Workspaces</h5>
                                 <p class="card-text">The world of real estate is undergoing a significant transformation, and
                                     at the heart of this change is the booming trend of co-working spaces...</p>
-                                <a href="bsquareblog.html?content=link2" class="btn btn-primary">Read More</a>
+                                <a href="bsquareblog.html?content=link2" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                         <div class="card"
@@ -735,7 +735,7 @@
                                 <h5 class="card-title">  Flexi Office Solutions: The Strategic Gamble Driving Big Revenue Boosts</h5>
                                 <p class="card-text">>In the ever-evolving landscape of work environments, Flexi Office
                                                 Companies are making a strategic bet that's not just about providing...</p>
-                                <a href="bsquareblog.html?content=link3" class="btn btn-primary">Read More</a>
+                                <a href="bsquareblog.html?content=link3" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
 
@@ -784,23 +784,23 @@
                                     <a class="dropdown-item" href="./prahladnagar.html">Prahlad Nagar Corporate Road</a>
                                     <a class="dropdown-item" href="./s.g.road.html">S.G.Road</a>
 
-                                    <a class="dropdown-item" href="./IIMAroad.html">IIM A Road</a>
+                                    <a class="dropdown-item" href="./iimaroad.html">IIM A Road</a>
                                     <a class="dropdown-item" href="./navrangpura.html">Navrangpura</a>
                                     <a class="dropdown-item" href="./sindhubhawan.html">Sindhu Bhawan</a>
                                 </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="Workspace.html">Workspace</a>
+                                <a class="nav-link" aria-current="page" href="workspace.html">Workspace</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="Facilities.html">Amenities</a>
+                                <a class="nav-link" href="facilities.html">Amenities</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="Gallery.html">Gallery</a>
+                                <a class="nav-link" href="gallery.html">Gallery</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="AboutUs.html">About&nbsp;Us</a>
+                                <a class="nav-link" href="aboutus.html">About&nbsp;Us</a>
                             </li>
                             <li class="nav-item" style="display: flex; align-items: center;">
                                 <a class="nav-link" href="tel:+91 9925122772">+91&nbsp;9925122772</a>
@@ -877,24 +877,24 @@
                                 <div class="carousel-item active" data-bs-interval="10000">
                                     <img src="./images/teamwork.jpg" class="d-block w-100" alt="...">
                                     <br>
-                                    <a href="bsquareblog.html?content=link4">Read More</a>
+                                    <a href="bsquareblog.html?content=link4" target="_bquare">Read More</a>
                                 </div>
                                 <div class="carousel-item" data-bs-interval="2000">
                                     <img src="./images/01.jpg" class="d-block w-100" alt="...">
                                     <br>
-                                    <a href="bsquareblog.html?content=link1">Read More</a>
+                                    <a href="bsquareblog.html?content=link1" target="_bquare">Read More</a>
                                     <br> <br>
                                 </div>
                                 <div class="carousel-item" data-bs-interval="2000">
                                     <img src="./location1/9-9.jpg" class="d-block w-100" alt="...">
                                     <br>
-                                    <a href="bsquareblog.html?content=link2">Read More</a>
+                                    <a href="bsquareblog.html?content=link2" target="_bquare">Read More</a>
                                     <br> <br>
                                 </div>
                                 <div class="carousel-item" data-bs-interval="2000">
                                     <img src="../images/office day.jpg" class="d-block w-100" alt="...">
                                     <br>
-                                    <a href="bsquareblog.html?content=link3">Read More</a>
+                                    <a href="bsquareblog.html?content=link3" target="_bquare">Read More</a>
                                     <br> <br>
                                 </div>
                             </div>
@@ -973,14 +973,14 @@
                             </div>
                             <ul class="p-0">
                                 <li><a href="./index.html">Home</a></li>
-                                <li><a href="./Blogs.html">Blogs</a></li>
+                                <li><a href="./blogs.html">Blogs</a></li>
 
-                                <li><a href="./Facilities.html">Facilities</a></li>
-                                <li><a href="./Careers.html">Careers</a></li>
+                                <li><a href="./facilities.html">Facilities</a></li>
+                                <li><a href="./careers.html">Careers</a></li>
 
-                                <li><a href="./Gallery.html">Gallery</a></li>
-                                <li><a href="./FAQ.html">FAQ</a></li>
-                                <li><a href="./AboutUs.html">About Us</a></li>
+                                <li><a href="./gallery.html">Gallery</a></li>
+                                <li><a href="./faq.html">FAQ</a></li>
+                                <li><a href="./aboutus.html">About Us</a></li>
                                 <li class="mb-5">&nbsp;</li>
 
                             </ul>
