--- a/AboutUs.html
+++ b/AboutUs.html
@@ -192,17 +192,17 @@
                                 </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="workspace.html">Workspace</a>
+                                <a class="nav-link" aria-current="page" href="./workspace.html">Workspace</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="facilities.html">Amenities</a>
+                                <a class="nav-link" href="./facilities.html">Amenities</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="gallery.html">Gallery</a>
+                                <a class="nav-link" href="./gallery.html">Gallery</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="aboutus.html">About&nbsp;Us</a>
+                                <a class="nav-link" href="./aboutus.html">About&nbsp;Us</a>
                             </li>
                             <li class="nav-item" style="display: flex; align-items: center;">
                                 <a class="nav-link" href="tel:+91 9925122772">+91&nbsp;9925122772</a>
